# yandex-praktikim-cpp-lesson5

./: CMakeLists.txt  README.md  defines.h  main.cpp  test_main.cpp
